@@ -4,6 +4,22 @@ plugins {
     id "io.freefair.lombok" version "6.4.3" // apply false
 }
 
+// Global variables for all modules
+ext {
+    lo4jVersion = "2.17.1" // <2.15="CVE-2021-44228 Log4j 2 Vulnerability"
+    junitVersion = "5.8.2"
+    v_groupRepo = "deplant"
+    v_groupId = "tech.deplant.java4ever"
+    v_version = "1.1.1-SNAPSHOT"
+    v_bindingName = "java4ever-binding"
+    v_bindingRepo = "java4ever-binding"
+    v_frameworkName = "java4ever-framework"
+    v_frameworkRepo = "java4ever-framework"
+    v_developerId = "cassandrus"
+    v_developerName = "Dmitriy Yankin"
+    v_developerEmail = "cassandrus@protonmail.com"
+}
+
 group v_groupId
 version v_version
 
@@ -71,7 +87,45 @@ tasks.withType(Test) {
 }
 tasks.withType(JavaExec) {
     jvmArgs += "--enable-preview"
+    jvmArgs += "--add-modules=jdk.incubator.foreign"
+    jvmArgs += "--enable-native-access=java4ever.binding"
+    jvmArgs += "-Djava.library.path=c:/opt/sdk/"
+    jvmArgs += "-XX:+UseShenandoahGC"
+    jvmArgs += "-XX:+AlwaysPreTouch"
 }
+
+
+java {
+    toolchain {
+        languageVersion = JavaLanguageVersion.of(17)
+    }
+}
+
+compileJava {
+    sourceCompatibility = JavaVersion.VERSION_17
+    targetCompatibility = JavaVersion.VERSION_17
+    doFirst {
+        options.compilerArgs += [
+                '--module-path', classpath.asPath
+        ]
+        classpath = files()
+    }
+}
+
+tasks.withType(JavaCompile).configureEach {
+    javaCompiler = javaToolchains.compilerFor {
+        languageVersion = JavaLanguageVersion.of(17)
+    }
+    options.compilerArgs += "--enable-preview"
+}
+
+tasks.withType(JavaExec).configureEach {
+    javaLauncher = javaToolchains.launcherFor {
+        languageVersion = JavaLanguageVersion.of(17)
+    }
+    jvmArgs += "--enable-preview"
+}
+
 
 sourceSets {
     main {
@@ -84,14 +138,14 @@ sourceSets {
 test {
     useJUnitPlatform()
 }
-
-task replaceVersionInREADME << {
-    // Maven
-    ant.replaceregexp(match: '<version>([0-9\\.]+)</version>', replace: "<version>${v_version}</version>", flags: 'g', byline: true) {
-        fileset(dir: '.', includes: 'README.md')
-    }
-    // Gradle
-    ant.replaceregexp(match: 'com\\.acme\\:mylibrary\\:([0-9\\.]+)', replace: "com.acme:mylibrary:${v_version}", flags: 'g', byline: true) {
-        fileset(dir: '.', includes: 'README.md')
-    }
-}
+//
+//task replaceVersionInREADME << {
+//    // Maven
+//    ant.replaceregexp(match: '<version>([0-9\\.]+)</version>', replace: "<version>${v_version}</version>", flags: 'g', byline: true) {
+//        fileset(dir: '.', includes: 'README.md')
+//    }
+//    // Gradle
+//    ant.replaceregexp(match: 'com\\.acme\\:mylibrary\\:([0-9\\.]+)', replace: "com.acme:mylibrary:${v_version}", flags: 'g', byline: true) {
+//        fileset(dir: '.', includes: 'README.md')
+//    }
+//}
